# mp3-streaming

./: CMakeLists.txt  main.cpp
CMakeModules/: FindLibMad.cmake  FindPortaudio.cmake  FindTaglib.cmake
